[gd_scene load_steps=9 format=3 uid="uid://c5e05fgq13623"]

[ext_resource type="Script" uid="uid://davfqrl1pp06r" path="res://scripts/main_menu.gd" id="1_1hj21"]
[ext_resource type="Texture2D" uid="uid://bx5l8j5ynccb8" path="res://main_menu/25188.png" id="2_1hj21"]
[ext_resource type="Theme" uid="uid://dvvkfn8xhja4p" path="res://buttons/start_button.tres" id="3_68vjf"]
[ext_resource type="Texture2D" uid="uid://c30eeqsxaljbw" path="res://main_menu/cooltext480058631182469.png" id="4_c2nvk"]
[ext_resource type="Theme" uid="uid://211obe2ff3x" path="res://buttons/settings_button.tres" id="4_cek1n"]
[ext_resource type="Theme" uid="uid://borsf41at585l" path="res://buttons/exit_button.tres" id="5_cek1n"]
[ext_resource type="AudioStream" uid="uid://drs3lresptnfy" path="res://buttons/mixkit-game-gun-shot-1662.mp3" id="7_gb6oj"]
[ext_resource type="AudioStream" uid="uid://1jfjspvlgeb2" path="res://buttons/mixkit-handgun-click-1660.mp3" id="8_7w3h0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1hj21")
metadata/_edit_vertical_guides_ = [959.0]
metadata/_edit_horizontal_guides_ = [781.0]

[node name="25188" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.319947, 0.269933)
texture = ExtResource("2_1hj21")

[node name="START" type="Button" parent="."]
offset_left = 856.0
offset_top = 782.0
offset_right = 1065.0
offset_bottom = 886.0
pivot_offset = Vector2(164, 115)
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_68vjf")

[node name="EXIT" type="Button" parent="."]
offset_left = 1116.0
offset_top = 781.0
offset_right = 1325.0
offset_bottom = 882.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("5_cek1n")

[node name="infooo" type="Button" parent="."]
offset_left = 594.0
offset_top = 781.0
offset_right = 803.0
offset_bottom = 879.0
theme = ExtResource("4_cek1n")
text = "
"

[node name="Cooltext480058631182469" type="Sprite2D" parent="."]
position = Vector2(952, 544)
scale = Vector2(1.0257, 1.12319)
texture = ExtResource("4_c2nvk")

[node name="click" type="AudioStreamPlayer2D" parent="."]
position = Vector2(845, 897)
stream = ExtResource("7_gb6oj")

[node name="hover" type="AudioStreamPlayer2D" parent="."]
position = Vector2(845, 897)
stream = ExtResource("8_7w3h0")

[connection signal="focus_entered" from="START" to="." method="_on_start_focus_entered"]
[connection signal="mouse_entered" from="START" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="START" to="." method="_on_start_pressed"]
[connection signal="toggled" from="START" to="." method="_on_start_toggled"]
[connection signal="mouse_entered" from="EXIT" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="infooo" to="." method="_on_infooo_mouse_entered"]
[connection signal="pressed" from="infooo" to="." method="_on_infooo_pressed"]
